--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +14,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.form {
+  display: flex;
+  width: 1000px;
+
+  margin-top: 30px;
+
+  flex-direction: row;
+  box-shadow: 0 0 40px rgb(200, 199, 199);
+  padding: 10px;
+  border-radius: 0px;
+  background: rgb(200, 199, 199);
+}
+.formitem {
+  font-family: 'PT Sans Narrow', sans-serif;
+  flex-direction: row;
+  height: 30px;
+  margin-right: 20px;
+  margin-top: 5px;
+
+  word-spacing: 4px;
+
+  font-weight: bold;
+  font-size: 1.5em;
 }
